--- a/style.css
+++ b/style.css
@@ -231,21 +231,72 @@ footer{
   color: #fff;
 }
 
-/*/* すべての画面サイズで適用される設定 */
-.social i{
-  color: black;
-}
-
-/* タブレット横置きサイズ（1024px）以下の際に適用される設定 */
-@media screen and (max-width:1024px){
-  .social i{
-    color: green;
-  }
-}
-
 @media screen and (max-width:425px){
-  セレクタ{
-    color: xxxx;
+  .header{
     width: 100%;
   }
+
+  .social{
+    display: none;
+  }
+
+  .nav-list{
+    width: 100%;
+  }
+
+  .nav-list-item{
+    display: block;
+    margin:0 0 10px 0;
+  }
+
+  main{
+    width: 100%;
+    display: block;
+  }
+
+  .main-visual-content{
+    width: 100%;
+  }
+
+  .blog{
+    width: 100%;
+    margin: 0;
+  }
+
+  .blog-box{
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+
+  .blog-image{
+    width: 49%
+  }
+
+  .blog-text{
+    width: 49%;
+    padding-top: 5px;
+  }
+
+  .sidebar{
+    width:100%;
+  }
+
+  .sidebar-contents{
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+.instagram-box{
+  width: 48%;
+  padding-top: 48%;
+  }
+
+  .instagram-box:nth-child(odd){
+    margin-right: 4%;
+  }
+
+  .pagination{
+    margin-bottom: 50px;
+  }
+
 }
